# goofyphysicsengine

./: CMakeLists.txt  README.md
include/glad/: gl.h
src/2d/: 2dsimulator.cpp  2dsimulator.h  circle.cpp  circle.h  collision.cpp  collision.h  main.cpp  object.cpp  object.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
src/main/: main.cpp  mainwindow.h
src/util/: util.cpp  util.h
